# parkplatz

./: AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pubspec.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_booking_vertical_slice.py  0002_prevent_overlapping_bookings.py  0003_host_marketplace.py  0004_repair_host_ownership_schema.py  0005_host_availability_pricing.py  0006_payments_and_connect.py  0007_trust_and_safety.py  0008_notifications_gdpr_accounts.py  0009_direct_payments.py  0010_launch_operations.py  0010_marketplace_media_reviews.py
backend/app/: main.py
backend/app/api/: account_routes.py  deps.py  host_schedule_routes.py  launch_routes.py  marketplace_routes.py  payment_routes.py  profile_media_routes.py  routes.py  routing_routes.py  trust_routes.py
backend/app/core/: config.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  account.py  audit_events.py  base.py  booking_notification_events.py  direct_payment.py  payment.py  trust.py
backend/app/schemas/: account.py  api.py  direct_payment.py  trust.py  (+1 more)
backend/tests/: test_account_controls.py  test_auth_service.py  test_availability_service.py  test_booking_ownership.py  test_booking_time.py  test_direct_payment_schemas.py  test_host_availability_schemas.py  test_host_marketplace.py  test_launch_operations.py  test_marketplace_validation.py  test_multiday_availability.py  test_payment_service.py  test_privacy_contract.py  test_trust_service.py
(+141 files in other folders)
