[project]
name = "freiraum-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "sqlalchemy[asyncio]>=2.0", "psycopg[binary]>=3.2", "alembic>=1.13", "pydantic-settings>=2.5", "email-validator>=2.2", "pwdlib[argon2]>=0.2", "pyjwt>=2.9"]
[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27", "ruff>=0.6"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
[tool.ruff]
line-length = 100
